[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/player/weapons/Explosion.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/Splode.ogg" type="AudioStream" id=2]

[sub_resource type="SpatialMaterial" id=3]
vertex_color_use_as_albedo = true
params_blend_mode = 1
albedo_color = Color( 0.647059, 0.435294, 0.0666667, 1 )

[sub_resource type="SphereMesh" id=1]
material = SubResource( 3 )
height = 1.0

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.00438596, 0.473684, 0.995614, 1 )
colors = PoolColorArray( 0.267578, 0.15992, 0, 1, 1, 0.902344, 0, 0.811765, 0.466797, 0.412518, 0, 1, 0, 0, 0, 0.529412 )

[sub_resource type="SphereShape" id=4]

[node name="Explosion" type="Spatial"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="CPUParticles" type="CPUParticles" parent="."]
amount = 64
lifetime = 0.01
mesh = SubResource( 1 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3( 0, 0, 0 )
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
color_ramp = SubResource( 2 )

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource( 2 )
bus = "Sound"

[node name="Area" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Area"]
shape = SubResource( 4 )

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="finished" from="AudioStreamPlayer3D" to="." method="_on_AudioStreamPlayer3D_finished"]
[connection signal="body_entered" from="Area" to="." method="_on_Area_body_entered"]
